<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@color/sheer"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="@string/welcomeMessage1"
            android:textSize="20sp" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:foregroundGravity="center_vertical"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:foregroundGravity="center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:padding="5dip"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:foregroundGravity="center_vertical"
            android:gravity="center|center_vertical"
            android:text="@string/welcomeMessage2" />

        <Button
            android:id="@+id/btnGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginTop="16dip"
            android:layout_marginRight="32dip"
            android:onClick="goToCalculator"
            android:text="Calculator" />

        <Button
            android:id="@+id/btnGo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dip"
            android:layout_marginRight="32dip"
            android:onClick="goToAbout"
            android:text="About Us" />

    </LinearLayout>
</RelativeLayout>